
	* Taking the usage of Q3Picture, since QPicture doesn't support
	saving to SVG.

2005-09-01  Pino Toscano <toscano.pino@tiscali.it>

	* Removed the usage of Q3PopupMenu in other places.

2005-08-31  Pino Toscano <toscano.pino@tiscali.it>

	* Complete the compiling with Qt4/KDE4.

	* Dropped the compatibility with KDE 3.x, as it will be
	impossbile to keep it.

	* Make the painting system working again.

	* Getting rid of some Q3* classes such as Q3PointArray and some
	Q3PopupMenu.

2005-08-30  Pino Toscano <toscano.pino@tiscali.it>

	* First attempts to make Kig compile with Qt4/KDE4: mainly
	converting to the compatibility classes.

	* Merge all the changes done in the 3.5 branch.

2005-08-25  Inge Wallin <inge@lysator.liu.se>

	* Fix bug 111452: Code violates C++ spec with improper const and
	iterator declarations.

2005-08-15  Pino Toscano <toscano.pino@tiscali.it>

	* Bump the version to 0.10.5 (I don't think to have enough stuff
	to have a 0.11 version - at least at the moment).

	* Small changes in the credits, putting me as maintainer.

	* Small update in the TODO.

	* Avoid setting empty captions in the KigFileDialog.

	* Update a bit one tip.

	* Add apidox comments for two classes.

2005-07-30  Pino Toscano <toscano.pino@tiscali.it>

	* With the help of the kde-usability team, I've refactored the Kig
	exporter dialogs. These new ones are more usable than the previous
	ones, more simply and more maintainable. This could make us
	closing bug #101072.

2005-07-25  Pino Toscano <toscano.pino@tiscali.it>

	* Apidox improvements.

2005-07-24  Pino Toscano <toscano.pino@tiscali.it>

	* More apidox fixes.

2005-07-23  Pino Toscano <toscano.pino@tiscali.it>

	* Apidox fixes.

2005-07-06  Pino Toscano <toscano.pino@tiscali.it>

	* Apidox improvements.

2005-06-24  Pino Toscano <toscano.pino@tiscali.it>

	* When making the template fo a new script, give as args names the
	names of the related objects, if they have one, as suggested by